# deluge-auto-remove-custom

./: .gitignore  Dockerfile  README.md  crontab  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: debug.yml  publish-image.yml
