[project]
name = "deluge-auto-remove-custom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "deluge-client==1.10.2",
    "idna==3.8",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "ruff>=0.13.3",
    "urllib3==2.2.2",
]
